--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "playwright": "^1.51.1",
-    "puppeteer": "^24.4.0"
+    "express": "4.21.2",
+    "playwright": "1.51.1",
+    "puppeteer": "24.4.0"
   }
 }
